--- a/src/main/resources/assets/elmosmod/lang/en_us.json
+++ b/src/main/resources/assets/elmosmod/lang/en_us.json
@@ -1,5 +1,6 @@
 {
   "item.elmosmod.black_opal" : "Black Opal",
+  "item.elmosmod.raw_black_opal": "Raw black opal",
   "item.elmosmod.tub_creatine" : "tub creatine",
   "block.elmosmod.black_opal_block" : "Block of black opal",
   "block.elmosmod.black_opal_ore" : "black opal ore",
